<resources>
    <string name="app_name">Planning</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_country">select country</string>
    <string name="choose_your_country">Choose Your Country</string>
    <string name="please_select_your_country_to_help_us_give_you_a_better_experience">Please select your country to help us give you a better experience</string>
    <string name="go_ahead">Go ahead</string>
    <string name="continue_with_another_gmail">Continue with another Gmail</string>
    <string name="select_country_">Select Country</string>
    <string name="choose_a_country">choose a country</string>
    <string name="login">login</string>
    <string name="login_">Login</string>
    <string name="password">password</string>
    <string name="password_">Password</string>
    <string name="confirm_password">confirm password</string>
    <string name="name">name</string>
    <string name="last_name">last name</string>
    <string name="birth_day">birth day</string>
    <string name="number_phone">number phone</string>
    <string name="email">email</string>
    <string name="fill_your_info">Fill your info</string>
    <string name="music">music</string>
    <string name="lecture">lecture</string>
    <string name="sport">sport</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="do_you_have_an_account">Do you have an account ?</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="remember_me">Remember Me</string>
    <string-array name="spinner_items">
        <item>8h - 10h</item>
        <item>10h - 12h</item>
        <item>14h - 16h</item>
        <item>16h - 18h</item>
    </string-array>
</resources>