<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.InscriptionFragment">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/register"
               android:textSize="22sp"
               android:textStyle="bold"
               android:textColor="@color/blue_"
               android:layout_marginTop="20dp"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:gravity="bottom"
               android:padding="10dp"
               android:layout_marginBottom="10dp">
               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/login"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp"
                   app:startIconDrawable="@drawable/ic_profile"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edt_login"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="text"
                       android:paddingStart="40dp"/>
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp"
                   android:hint="@string/email"
                   app:startIconDrawable="@drawable/ic_email"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edt_email"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="text"
                       android:paddingStart="40dp"/>
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/edt_password_layout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp"
                   android:hint="@string/password"
                   app:startIconDrawable="@drawable/ic_password"
                   app:endIconMode="password_toggle"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edt_password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPassword"
                       android:paddingStart="40dp"/>
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:id="@+id/edt_confirm_password_layout"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp"
                   android:hint="@string/confirm_password"
                   app:startIconDrawable="@drawable/ic_password"
                   app:endIconMode="password_toggle"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edt_confirm_password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPassword"
                       android:paddingStart="40dp"/>
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp"
                   android:hint="@string/name"
                   app:startIconDrawable="@drawable/ic_user__"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edt_name"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="text"
                       android:paddingStart="40dp"/>
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp"
                   android:hint="@string/last_name"
                   app:startIconDrawable="@drawable/ic_user__"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edt_last_name"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="text"
                       android:paddingStart="40dp"/>
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp"
                   android:hint="@string/birth_day"
                   app:startIconDrawable="@drawable/ic_date"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edt_birthday"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:focusable="false"
                       android:clickable="true"
                       android:paddingStart="40dp"/>
               </com.google.android.material.textfield.TextInputLayout>
               <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp"
                   android:hint="@string/number_phone"
                   app:startIconDrawable="@drawable/ic_phone"
                   style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                   <com.google.android.material.textfield.TextInputEditText
                       android:id="@+id/edt_number_phone"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="number"
                       android:paddingStart="40dp"/>
               </com.google.android.material.textfield.TextInputLayout>


               <com.google.android.material.card.MaterialCardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:cardCornerRadius="12dp"
                   app:cardElevation="4dp"
                   android:padding="16dp"
                   android:layout_marginHorizontal="10dp"
                   android:layout_marginVertical="10dp">

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:gravity="center"
                       android:paddingHorizontal="20dp">

                       <com.google.android.material.checkbox.MaterialCheckBox
                           android:id="@+id/cbx_sport"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:text="@string/sport"
                           android:layout_weight="1"
                           android:checked="true"/>

                       <com.google.android.material.checkbox.MaterialCheckBox
                           android:id="@+id/cbx_music"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:text="@string/music"
                           android:layout_weight="1"/>

                       <com.google.android.material.checkbox.MaterialCheckBox
                           android:id="@+id/cbx_lecture"
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:text="@string/lecture"
                           android:layout_weight="1"/>

                   </LinearLayout>

               </com.google.android.material.card.MaterialCardView>
               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/btn_save"
                   android:layout_width="match_parent"
                   android:layout_height="50dp"
                   android:text="@string/save"
                   android:background="@drawable/button_design"
                   android:textAllCaps="false"
                   android:layout_marginVertical="20dp"
                   android:visibility="visible"
                   android:layout_marginHorizontal="20dp"
                   android:textColor="@color/white"/>
           </LinearLayout>
       </LinearLayout>
   </ScrollView>

</FrameLayout>