<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_back"
                    android:paddingStart="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profile"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom"
                android:padding="10dp"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/ic_user_"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    app:startIconDrawable="@drawable/ic_profile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingStart="40dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingStart="40dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/name"
                    app:startIconDrawable="@drawable/ic_user__"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingStart="40dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/last_name"
                    app:startIconDrawable="@drawable/ic_user__"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:paddingStart="40dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/birth_day"
                    app:startIconDrawable="@drawable/ic_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:clickable="true"
                        android:paddingStart="40dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/number_phone"
                    app:startIconDrawable="@drawable/ic_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_number_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:paddingStart="40dp"/>
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="4dp"
                    android:padding="16dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:paddingHorizontal="20dp">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cbx_sport"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/sport"
                            android:layout_weight="1"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cbx_music"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/music"
                            android:layout_weight="1"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/cbx_lecture"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lecture"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>